package com.youkeda.application.art.role.model;

/**
 * TODO
 *
 * @author zr
 * @date 2020/3/8, 周日
 */
public enum RoleType {
    /**
     * 系统角色
     */
    SYSTEM,
    /**
     * 自定义角色
     */
    CUSTOM

}
